added 2 new activities and comments

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,5 @@
     <color name="WasColorPrimaryDark">#0477bd</color>
     <color name="colorAccent">#e91e24</color>
     <color name="grayColor">#c2c2c2</color>
+    <color name ="White">#ffffff</color>
 </resources>
